# work-utils

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
src/: app.rs  bytes_base58.rs  lib.rs  main.rs
src/converter/: base58_bytes.rs  date_timestamp.rs  mod.rs
web/: .gitignore  README.md
work-utils-app/: Cargo.toml
work-utils-app/scripts/: build_web.sh
work-utils-app/src/: app.rs  lib.rs  main.rs
work-utils-app/src/converter/: base58_bytes.rs  date_timestamp.rs
work-utils-app/web/: .gitignore  index.html
work-utils-server/: Cargo.toml
work-utils-server/src/: main.rs
