[workspace]
members = ["work-utils-app", "work-utils-server"]
default-members = ["work-utils-app"]
resolver = "2"

[workspace.package]
version = "1.0.3"

[workspace.dependencies]
log = { version = "0.4", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.129"
primitive-types = "0.12.2"
bs58 = "0.5.1"
hex = "0.4.3"
chrono = "0.4.38"
chrono-tz = "0.9.0"
getrandom = { version = "0.2.15", features = ["js"]}

# For block <-> timestamp
reqwest = {version = "0.12.8", features = ["json"]}
tokio = { version = "1.35.1", features = ["sync", "macros", "rt"] }
